# Elemental-Reactions-Framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_swf.bat  todo.txt  vcpkg.json
Interface/: erfgauge.swf  smsogauge.swf
Interface/SMSO/: smsogauge.swf
art/ui/flash/: template.xml
art/ui/flash/src/: ERF_Gauge.as  Main.as  Register.as  SMSO_Gauge.as
flash/: gauge_template.xml
flash/src/: ERF_Gauge.as
include/: TrueHUDAPI.h
src/: Config.cpp  Config.h  DrainEffectHook.cpp  DrainEffectHook.h  ElementalEffects.cpp  ElementalGauges.cpp  ElementalGauges.h  ElementalGaugesHook.cpp  ElementalGaugesHook.h  ElementalReactionsAPI.h  ElementalStates.cpp  ElementalStates.h  MagicGaugesListener.cpp  MagicGaugesListener.h  ModAPI.cpp  ModAPI.h  Offsets.h  PCH.h  Plugin.RemoveDrains.cpp  Utils.cpp  Utils.h  hooks.cpp  hooks.h  logger.cpp  logger.h  plugin.ElementalReactions.cpp  plugin.cpp  teste.cpp
src/common/: Helpers.h  PluginSerialization.cpp  PluginSerialization.h  StateCommon.h
src/elemental_reactions/: ElementalEffects.cpp  ElementalEffects.h  ElementalGauges.cpp  ElementalGauges.h  ElementalGaugesHook.cpp  ElementalGaugesHook.h  ElementalStates.cpp  ElementalStates.h  erf_element.cpp  erf_element.h  erf_preeffect.cpp  erf_preeffect.h  erf_reaction.cpp  erf_reaction.h  erf_state.cpp  erf_state.h
src/hud/: HUDTick.cpp  HUDTick.h  InjectHUD.cpp  InjectHUD.h  TrueHUDMenuWatcher.cpp  TrueHUDMenuWatcher.h
src/overrides/: Overrides.cpp  Overrides.h
src/ui/: ERF_UI.cpp  ERF_UI.h
